--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
-github: dscalzi
-patreon: dscalzi
-custom: ['https://www.paypal.me/dscalzi']
+github: TDK_Mart
+twitch: Chico0oo0
+custom: ['https://www.twitch.tv/chico0oo0npm']
