--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "helioslauncher",
+  "name": "MoneyriaLauncher",
   "version": "1.8.0",
-  "productName": "Helios Launcher",
-  "description": "Modded Minecraft Launcher",
-  "author": "Daniel Scalzi (https://github.com/dscalzi/)",
+  "productName": "MoneyriaLauncher",
+  "description": "Un Launcher minecraft pour votre serveur préféré !",
+  "author": "TDK _Mart and for the minor change Daniel Scalzi",
   "license": "UNLICENSED",
-  "homepage": "https://github.com/dscalzi/HeliosLauncher",
+  "homepage": "https://github.com/TDKMart/MoneyriaLauncher",
   "bugs": {
-    "url": "https://github.com/dscalzi/HeliosLauncher/issues"
+    "url": "https://github.com/TDKMart/MoneyriaLauncher/issue"
   },
   "private": true,
   "main": "index.js",
@@ -46,6 +46,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dscalzi/HeliosLauncher.git"
+    "url": "git+https://github.com/TDKMart/MoneyriaLauncher.git"
   }
 }
